fix position of team-participation info for text exercises

--- a/src/main/webapp/app/exercises/text/participate/text-editor.component.scss
+++ b/src/main/webapp/app/exercises/text/participate/text-editor.component.scss
@@ -20,8 +20,8 @@
     }
 
     .grid-area-team-info {
-        grid-area: team-info;
-        justify-self: flex-end;
+        //grid-area: team-info;
+        justify-self: flex-start;
     }
 
     .grid-area-main {
