--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex flex-column justify-content-center">
         <h4 class="mb-0" jhiTranslate="artemisApp.studentExamDetail.studentExam" [translateValues]="{ courseTitle: course?.title }">Student exam ({{ course?.title }})</h4>
     </div>
-    <div class="ml-auto d-flex">
+    <div class="ml-auto d-flex" *ngIf="false">
         <button class="btn btn-primary" style="height: 35px;" (click)="downloadPdf()" *ngIf="course?.isAtLeastInstructor">
             <fa-icon [icon]="'download'" [fixedWidth]="true"></fa-icon><span jhiTranslate="artemisApp.studentExamDetail.downloadPDF">&nbsp;Download PDF</span>
         </button>
