--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -15,24 +15,20 @@
         <h5><span jhiTranslate="artemisApp.studentExamDetail.student">Student</span></h5>
         <ol style="list-style-type: none;">
             <li>
-                <span
-                    ><b><span jhiTranslate="artemisApp.studentExamDetail.name">Name: </span></b>{{ student.name }}</span
-                >
+                <strong jhiTranslate="artemisApp.studentExamDetail.name">Name:</strong>
+                {{ student.name }}
             </li>
             <li>
-                <span
-                    ><b><span jhiTranslate="artemisApp.studentExamDetail.login">Login: </span></b>{{ student.login }}</span
-                >
+                <strong jhiTranslate="artemisApp.studentExamDetail.login">Login:</strong>
+                {{ student.login }}
             </li>
             <li>
-                <span
-                    ><b><span jhiTranslate="artemisApp.studentExamDetail.email">Email: </span></b>{{ student.email }}</span
-                >
+                <strong jhiTranslate="artemisApp.studentExamDetail.email">Email:</strong>
+                {{ student.email }}
             </li>
             <li>
-                <span
-                    ><b><span jhiTranslate="artemisApp.studentExamDetail.matriculationNumber">Matriculation number: </span></b>{{ student.visibleRegistrationNumber }}</span
-                >
+                <strong jhiTranslate="artemisApp.studentExamDetail.matriculationNumber">Matriculation number:</strong>
+                {{ student.visibleRegistrationNumber }}
             </li>
         </ol>
     </div>
