--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
@@ -73,7 +73,7 @@
                 [(ngModel)]="textExercise.maxScore"
             />
         </div>
-        <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
+        <div class="form-group">
             <div class="form-check custom-control custom-checkbox">
                 <input
                     type="checkbox"
