--- a/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-participation.component.scss
+++ b/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-participation.component.scss
@@ -9,7 +9,7 @@
     }
 }
 
-.quiz-footer {
+.quiz-navigation {
     width: 60px;
     height: 100%;
     position: absolute;
@@ -20,10 +20,6 @@
     z-index: 8;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
     background: white;
-
-    .container {
-        height: 100%;
-    }
 
     .draganddropcolor-question {
         background-color: #86ccd5 !important;
@@ -40,11 +36,11 @@
 }
 
 .quiz-content,
-.quiz-footer-content {
+.quiz-navigation-content-content {
     font-size: 16px;
 }
 
-.quiz-footer-content {
+.quiz-navigation-content {
     height: 300px;
     display: flex;
     flex-direction: column;
