add breakpoint service -> execute javascript on breakpoint changes add exam navigation bar first iteration

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: bind exercises to studentExams-->
+<jhi-exam-navigation-bar [exercises]="course?.exercises"></jhi-exam-navigation-bar>
 <jhi-exam-participation-cover [startView]="true" [exam]="exam" *ngIf="isVisible() && !isOver()"></jhi-exam-participation-cover>
 <jhi-exam-participation-summary *ngIf="isVisible() && isOver()"></jhi-exam-participation-summary>
 <div *ngIf="!disconnected" class="exam-footer connected">
