--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -12,10 +12,15 @@
     </div>
 </div>
 <jhi-alert></jhi-alert>
-<div *ngFor="let exerciseGroup of exerciseGroups" class="mt-4" style="border: 1px solid #cccccc;">
+<div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-4" style="border: 1px solid #cccccc;">
     <div class="d-flex p-3" style="background-color: #e1e1e1;">
         <div class="mr-3">
-            <input type="number" value="0" class="text-center" style="width: 50px; height: 32px;" />
+            <button (click)="moveUp(i)" [disabled]="i == 0" class="border-0 p-0 mr-1 bg-transparent">
+                <fa-icon [icon]="'angle-up'" style="font-size: 1.3rem;"></fa-icon>
+            </button>
+            <button (click)="moveDown(i)" [disabled]="i >= exerciseGroups.length - 1" class="border-0 p-0 bg-transparent">
+                <fa-icon [icon]="'angle-down'" style="font-size: 1.3rem;"></fa-icon>
+            </button>
         </div>
         <div class="d-flex flex-column justify-content-center">
             <h5 class="font-weight-bold mb-0">{{ exerciseGroup.title }}</h5>
