--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex pb-3 border-bottom">
+<div class="d-flex pb-3 border-bottom mb-2">
     <div class="d-flex flex-column justify-content-center">
         <h4 class="mb-0">{{ 'artemisApp.examManagement.exerciseGroups' | translate }}</h4>
     </div>
@@ -12,7 +12,8 @@
     </div>
 </div>
 <jhi-alert></jhi-alert>
-<div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-4" style="border: 1px solid #cccccc;">
+<div class="mt-3 text-right" style="font-size: 0.85rem;">Number of exercise groups: {{ exerciseGroups ? exerciseGroups.length : 0 }}</div>
+<div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-3" style="border: 1px solid #cccccc;">
     <div class="d-flex p-3" style="background-color: #e1e1e1;">
         <div class="mr-3">
             <button (click)="moveUp(i)" [disabled]="i == 0" class="border-0 p-0 mr-1 bg-transparent">
