lower case vs upper case

--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-plans-and-repositories-preview.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-plans-and-repositories-preview.component.html
@@ -12,15 +12,21 @@
                 <hr class="pt-0 pb-0 mt-1 mb-1" />
                 <ul>
                     <li>
-                        <code class="text-white badge badge-primary label-preview">{{ getCourseShortName() }}{{ programmingExercise.shortName.toLowerCase() }}-exercise</code>
+                        <code class="text-white badge badge-primary label-preview"
+                            >{{ getCourseShortName()?.toLowerCase() }}{{ programmingExercise.shortName.toLowerCase() }}-exercise</code
+                        >
                         <jhi-help-icon placement="right" text="artemisApp.programmingExercise.preview.templateRepoTooltip"></jhi-help-icon>
                     </li>
                     <li>
-                        <code class="text-white badge badge-primary label-preview">{{ getCourseShortName() }}{{ programmingExercise.shortName.toLowerCase() }}-solution</code>
+                        <code class="text-white badge badge-primary label-preview"
+                            >{{ getCourseShortName()?.toLowerCase() }}{{ programmingExercise.shortName.toLowerCase() }}-solution</code
+                        >
                         <jhi-help-icon placement="right" text="artemisApp.programmingExercise.preview.solutionRepoTooltip"></jhi-help-icon>
                     </li>
                     <li>
-                        <code class="text-white badge badge-primary label-preview">{{ getCourseShortName() }}{{ programmingExercise.shortName.toLowerCase() }}-tests</code>
+                        <code class="text-white badge badge-primary label-preview"
+                            >{{ getCourseShortName()?.toLowerCase() }}{{ programmingExercise.shortName.toLowerCase() }}-tests</code
+                        >
                         <jhi-help-icon placement="right" text="artemisApp.programmingExercise.preview.testRepoTooltip"></jhi-help-icon>
                     </li>
                 </ul>
@@ -33,11 +39,15 @@
             <hr class="pt-0 pb-0 mt-1 mb-1" />
             <ul>
                 <li>
-                    <code class="text-white badge badge-primary label-preview">{{ getCourseShortName() }}{{ programmingExercise.shortName.toUpperCase() }}-BASE</code>
+                    <code class="text-white badge badge-primary label-preview"
+                        >{{ getCourseShortName()?.toUpperCase() }}{{ programmingExercise.shortName.toUpperCase() }}-BASE</code
+                    >
                     <jhi-help-icon placement="right" text="artemisApp.programmingExercise.preview.templateBuildPlanTooltip"></jhi-help-icon>
                 </li>
                 <li>
-                    <code class="text-white badge badge-primary label-preview">{{ getCourseShortName() }}{{ programmingExercise.shortName.toUpperCase() }}-SOLUTION</code>
+                    <code class="text-white badge badge-primary label-preview"
+                        >{{ getCourseShortName()?.toUpperCase() }}{{ programmingExercise.shortName.toUpperCase() }}-SOLUTION</code
+                    >
                     <jhi-help-icon placement="right" text="artemisApp.programmingExercise.preview.solutionBuildPlanTooltip"></jhi-help-icon>
                 </li>
             </ul>
