--- a/src/main/webapp/app/exercises/text/manage/text-exercise-import.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise-import.component.html
@@ -6,7 +6,7 @@
     <div class="modal-body">
         <div class="form-group form-inline">
             Search for exercise: <input class="form-control ml-2" type="text" name="searchExcercise" [(ngModel)]="searchTerm" />
-            <span class="ml-3" *ngIf="loading" jhiTranslate="artemisApp.programmingExercise.import.loading">Loading...</span>
+            <span class="ml-3" *ngIf="loading" jhiTranslate="artemisApp.exercise.import.loading">Loading...</span>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -16,12 +16,15 @@
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="{{ column.TITLE }}">
-                        <span jhiTranslate="artemisApp.programmingExercise.import.table.title">Title</span>
+                        <span jhiTranslate="artemisApp.exercise.import.table.title">Title</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="{{ column.COURSE_TITLE }}">
-                        <span jhiTranslate="artemisApp.programmingExercise.import.table.course">Course</span>
+                        <span jhiTranslate="artemisApp.exercise.import.table.course">Course</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th style="width: 130px;">
+                        <span jhiTranslate="artemisApp.exercise.import.table.examQuestion">Exam Question</span>
                     </th>
                     <th></th>
                 </tr>
@@ -35,10 +38,15 @@
                         <ngb-highlight [result]="exercise.title" [term]="searchTerm"></ngb-highlight>
                     </td>
                     <td>
-                        <ngb-highlight [result]="exercise.course.title" [term]="searchTerm"></ngb-highlight>
+                        <ngb-highlight [result]="exercise | courseOrExamTitle" [term]="searchTerm"></ngb-highlight>
                     </td>
                     <td>
-                        <jhi-button (click)="openImport(exercise)" [title]="'artemisApp.programmingExercise.import.table.doImport'"> </jhi-button>
+                        <div style="text-align: center; vertical-align: middle;">
+                            <fa-icon *ngIf="exercise.exerciseGroup" [icon]="'check'"></fa-icon>
+                        </div>
+                    </td>
+                    <td>
+                        <jhi-button (click)="openImport(exercise)" [title]="'artemisApp.exercise.import.table.doImport'"> </jhi-button>
                     </td>
                 </tr>
             </tbody>
