--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -9,7 +9,7 @@
             <button class="btn btn-primary" style="height: 40px;" (click)="generateStudentExams()" *ngIf="course?.isAtLeastInstructor">
                 <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
             </button>
-            <button class="btn btn-secondary" style="height: 40px;" (click)="startExercises()" *ngIf="course?.isAtLeastInstructor">
+            <button class="btn btn-secondary ml-1" style="height: 40px;" (click)="startExercises()" *ngIf="course?.isAtLeastInstructor">
                 <span jhiTranslate="artemisApp.studentExams.startExercises">Start Exercises</span>
             </button>
         </div>
