--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -5,30 +5,28 @@
 <ng-container *ngIf="isVisible() && isActive() && !isOver()">
     <!-- exam nav -->
     <!-- TODO: bind exercises to studentExams-->
-    <jhi-exam-navigation-bar [exercises]="studentExam.exercises"></jhi-exam-navigation-bar>
+    <jhi-exam-navigation-bar [exercises]="studentExam.exercises" (onExerciseChanged)="onExerciseChange($event)"></jhi-exam-navigation-bar>
     <!-- exercises -->
     <ng-container *ngSwitch="studentExam.exercises[activeExercise].type">
         <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="studentExam.exercises[activeExercise].studentParticipations[0]"></jhi-exam-quiz>
         <jhi-text-editor-exam *ngSwitchCase="TEXT"></jhi-text-editor-exam>
         <jhi-modeling-submission-exam *ngSwitchCase="MODELING"></jhi-modeling-submission-exam>
     </ng-container>
+    <!-- exam connection status footer bar -->
+    <div *ngIf="!disconnected" class="exam-footer connected">
+        <div class="container">
+            <div class="exam-footer-content">
+                <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
+                <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="disconnected" class="exam-footer disconnected">
+        <div class="container">
+            <div class="exam-footer-content">
+                <p jhiTranslate="artemisApp.examParticipation.disconnected" class="mb-0"></p>
+                <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
+            </div>
+        </div>
+    </div>
 </ng-container>
-
-<!-- exam connection status footer bar -->
-<div *ngIf="!disconnected" class="exam-footer connected">
-    <div class="container">
-        <div class="exam-footer-content">
-            <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
-            <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
-        </div>
-    </div>
-</div>
-
-<div *ngIf="disconnected" class="exam-footer disconnected">
-    <div class="container">
-        <div class="exam-footer-content">
-            <p jhiTranslate="artemisApp.examParticipation.disconnected" class="mb-0"></p>
-            <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
-        </div>
-    </div>
-</div>
