--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,14 +1,14 @@
-<jhi-exam-participation-cover [startView]="true" [exam]="studentExam" *ngIf="isVisible() && !isOver()"></jhi-exam-participation-cover>
+<jhi-exam-participation-cover [startView]="true" [exam]="studentExam.exam" *ngIf="isVisible() && !isOver()"></jhi-exam-participation-cover>
 <jhi-exam-participation-summary *ngIf="isVisible() && isOver()"></jhi-exam-participation-summary>
 
 <!-- exam participation -->
 <ng-container *ngIf="isVisible() && isActive() && !isOver()">
     <!-- exam nav -->
     <!-- TODO: bind exercises to studentExams-->
-    <jhi-exam-navigation-bar [exercises]="studentExam.exercises" (onExerciseChanged)="onExerciseChange($event)"></jhi-exam-navigation-bar>
+    <jhi-exam-navigation-bar [exercises]="studentExam.exercises" [endDate]="studentExam.exam.endDate" (onExerciseChanged)="onExerciseChange($event)"></jhi-exam-navigation-bar>
     <!-- exercises -->
-    <ng-container *ngSwitch="studentExam.exercises[activeExercise].type">
-        <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="studentExam.exercises[activeExercise].studentParticipations[0]"></jhi-exam-quiz>
+    <ng-container *ngSwitch="activeExercise.type">
+        <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-exam-quiz>
         <jhi-text-editor-exam *ngSwitchCase="TEXT"></jhi-text-editor-exam>
         <jhi-modeling-submission-exam *ngSwitchCase="MODELING"></jhi-modeling-submission-exam>
     </ng-container>
