--- a/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
@@ -53,13 +53,28 @@
         <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
     </button>
     <button
-        *ngIf="examMode || exercise.isAtLeastInstructor"
+        *ngIf="(examMode || exercise.isAtLeastInstructor) && exercise.type !== exerciseType.PROGRAMMING"
         jhiDeleteButton
         [entityTitle]="exercise.title"
         deleteQuestion="artemisApp.exercise.delete.question"
         deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
         (delete)="deleteExercise()"
         [dialogError]="dialogError$"
+    >
+        <fa-icon [icon]="'times'"></fa-icon>
+    </button>
+    <button
+        *ngIf="exercise.type === exerciseType.PROGRAMMING"
+        jhiDeleteButton
+        [entityTitle]="exercise.title"
+        deleteQuestion="artemisApp.programmingExercise.delete.question"
+        (delete)="deleteProgrammingExercise($event)"
+        [dialogError]="dialogError$"
+        deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
+        [additionalChecks]="{
+            deleteStudentReposBuildPlans: 'artemisApp.programmingExercise.delete.studentReposBuildPlans',
+            deleteBaseReposBuildPlans: 'artemisApp.programmingExercise.delete.baseReposBuildPlans'
+        }"
     >
         <fa-icon [icon]="'times'"></fa-icon>
     </button>
