calculate remaining exam time

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -39,5 +39,8 @@
         <button class="btn btn-primary px-5" (click)="submitExam()">
             {{ 'artemisApp.examParticipation.finishExam' | translate }}
         </button>
+        <p>
+            {{ remainingTime }}
+        </p>
     </div>
 </div>
