--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -1,9 +1,8 @@
-<div class="d-flex justify-content-between">
-    <p class="h3 w-25 text-overflow" *ngIf="exercises && exercises.length > 0">
-        <!--        TODO: translate-->
-        {{ exercises[exerciseIndex].title }}
+<div class="row justify-content-between align-items-center exam-navigation py-2">
+    <p class="col h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">
+        {{ (exerciseIndex + 1) + '/' + exercises.length }} : {{ exercises[exerciseIndex].title }}
     </p>
-    <div>
+    <div class="col">
         <div class="d-flex justify-content-center">
             <div class="navigation-item">
                 <button class="btn btn-secondary w-100" (click)="changeExercise(exerciseIndex - 1)">
@@ -35,12 +34,16 @@
             </div>
         </div>
     </div>
-    <div class="w-25 d-flex justify-content-end">
-        <button class="btn btn-primary px-5" (click)="submitExam()">
-            {{ 'artemisApp.examParticipation.finishExam' | translate }}
-        </button>
-        <div class="h3">
-            {{ remainingTime }}
+    <div class="col">
+        <div class="row justify-content-end align-items-center flex-nowrap pr-2">
+            <div class="col-auto">
+                <button class="btn btn-sm btn-primary px-3" (click)="submitExam()">
+                    {{ 'artemisApp.examParticipation.finishExam' | translate }}
+                </button>
+            </div>
+            <div class="col-auto h5 m-0 text-overflow px-3 py-2 remaining-time">
+                {{ remainingTime }}
+            </div>
         </div>
     </div>
 </div>
