--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -1,7 +1,5 @@
 <div class="row justify-content-between align-items-center exam-navigation py-2">
-    <p class="col h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">
-        {{ (exerciseIndex + 1) + '/' + exercises.length }} : {{ exercises[exerciseIndex].title }}
-    </p>
+    <p class="col h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">{{ exerciseIndex + 1 + '/' + exercises.length }} : {{ exercises[exerciseIndex].title }}</p>
     <div class="col">
         <div class="d-flex justify-content-center">
             <div class="navigation-item">
