--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
@@ -5,6 +5,10 @@
         background: white;
         text-align: center;
     }
+
+    .critical {
+        background: #fedc56;
+    }
 }
 
 .navigation-item {
