--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -8,9 +8,9 @@
     <jhi-exam-navigation-bar [exercises]="studentExam.exercises" [endDate]="studentExam.exam.endDate" (onExerciseChanged)="onExerciseChange($event)"></jhi-exam-navigation-bar>
     <!-- exercises -->
     <ng-container [ngSwitch]="activeExercise.type">
-        <!--<jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-exam-quiz>
+        <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-exam-quiz>
         <jhi-text-editor-exam *ngSwitchCase="TEXT" [participationId]="activeExercise.studentParticipations[0].id"></jhi-text-editor-exam>
-        <jhi-modeling-submission-exam *ngSwitchCase="MODELING" [participationId]="activeExercise.studentParticipations[0].id"></jhi-modeling-submission-exam>-->
+        <jhi-modeling-submission-exam *ngSwitchCase="MODELING" [participationId]="activeExercise.studentParticipations[0].id"></jhi-modeling-submission-exam>
     </ng-container>
     <!-- exam connection status footer bar -->
     <div *ngIf="!disconnected" class="exam-footer connected">
