--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-between align-items-center exam-navigation py-2">
     <div class="col d-none d-md-block h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">
-        {{ 'artemisApp.examParticipation.progress' | translate: { current: exerciseIndex + 1, all: exercises.length, title: exercises[exerciseIndex].title } }}
+        {{ 'artemisApp.examParticipation.progress' | translate: { current: exerciseIndex + 1, all: exercises.length } }}
     </div>
     <div class="col d-block d-md-none h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">
         {{ 'artemisApp.examParticipation.progressSmall' | translate: { current: exerciseIndex + 1, all: exercises.length } }}
