--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-between align-items-center exam-navigation py-2">
+<div class="row justify-content-between align-items-center exam-navigation sticky-top py-2">
     <div class="col d-none d-md-block h3 m-0 text-overflow" *ngIf="exercises && exercises.length > 0">
         {{ 'artemisApp.examParticipation.progress' | translate: { current: exerciseIndex + 1, all: exercises.length } }}
     </div>
