--- a/src/main/webapp/app/exercises/text/manage/text-exercise-import.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise-import.component.html
@@ -38,7 +38,7 @@
                         <ngb-highlight [result]="exercise.title" [term]="searchTerm"></ngb-highlight>
                     </td>
                     <td>
-                        <ngb-highlight [result]="exercise | courseOrExamTitle" [term]="searchTerm"></ngb-highlight>
+                        <ngb-highlight [result]="exercise | courseTitle" [term]="searchTerm"></ngb-highlight>
                     </td>
                     <td>
                         <div style="text-align: center; vertical-align: middle;">
