--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -14,11 +14,6 @@
 <jhi-alert></jhi-alert>
 <div *ngFor="let exerciseGroup of exerciseGroups" class="mt-4" style="border: 1px solid #cccccc;">
     <div class="d-flex p-3" style="background-color: #e1e1e1;">
-        <!--
-        <div class="mr-3">
-            <input type="number" value="0" class="text-center" style="width: 50px; height: 32px;" />
-        </div>
-        -->
         <div class="d-flex flex-column justify-content-center">
             <h5 class="font-weight-bold mb-0">{{ exerciseGroup.title }}</h5>
         </div>
@@ -31,37 +26,40 @@
             <div class="d-flex flex-column justify-content-center">
                 <div class="btn-group flex-btn-group-container">
                     <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
-                        <button class="btn btn-primary float-right jh-create-entity create-text-exercise mr-1" (click)="openImportModal(exerciseGroup.id)">
+                        <button class="btn btn-info btn-sm mr-1 mb-1" (click)="openImportModal(exerciseGroup.id)">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="hidden-sm-down" jhiTranslate="artemisApp.textExercise.home.importLabel"></span>
                         </button>
-                        <button [routerLink]="[exerciseGroup.id, 'text-exercises', 'new']" class="btn btn-info btn-sm mr-1">
+                        <button [routerLink]="[exerciseGroup.id, 'text-exercises', 'new']" class="btn btn-info btn-sm mr-1 mb-1">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.exerciseGroup.addTextExercise' | translate }}</span>
                         </button>
                     </div>
                     <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
-                        <button [routerLink]="[exerciseGroup.id, 'file-upload-exercises', 'new']" class="btn btn-info btn-sm mr-1">
+                        <button [routerLink]="[exerciseGroup.id, 'file-upload-exercises', 'new']" class="btn btn-info btn-sm mr-1 mb-1">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.exerciseGroup.addFileUploadExercise' | translate }}</span>
                         </button>
                     </div>
-                    <div class="d-flex flex-column mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
-                        <button type="submit" [routerLink]="[exerciseGroup.id, 'edit']" class="btn btn-primary btn-sm mr-1">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline">{{ 'entity.action.edit' | translate }}</span>
-                        </button>
-                        <button
-                            *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']"
-                            jhiDeleteButton
-                            [entityTitle]="exerciseGroup.title"
-                            deleteQuestion="artemisApp.examManagement.exerciseGroup.delete.question"
-                            deleteConfirmationText="artemisApp.examManagement.exerciseGroup.delete.typeNameToConfirm"
-                            (delete)="deleteExerciseGroup(exerciseGroup.id)"
-                            [dialogError]="dialogError$"
-                        >
-                            <fa-icon [icon]="'times'"></fa-icon>
-                        </button>
+                    <div class="btn-group-vertical mr-1 mb-1">
+                        <div class="d-flex flex-column mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
+                            <button type="submit" [routerLink]="[exerciseGroup.id, 'edit']" class="btn btn-primary btn-sm mr-1 mb-1">
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                <span class="d-none d-md-inline">{{ 'entity.action.edit' | translate }}</span>
+                            </button>
+                            <button
+                                *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']"
+                                jhiDeleteButton
+                                [entityTitle]="exerciseGroup.title"
+                                deleteQuestion="artemisApp.examManagement.exerciseGroup.delete.question"
+                                deleteConfirmationText="artemisApp.examManagement.exerciseGroup.delete.typeNameToConfirm"
+                                (delete)="deleteExerciseGroup(exerciseGroup.id)"
+                                [dialogError]="dialogError$"
+                                class="mb-1"
+                            >
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
