fix modeling-sumbission change navigation bar location

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
@@ -1,5 +1,6 @@
 .exam-navigation {
     background: #e1e1e1;
+    margin: -1.25rem -1.25rem 1.25rem -1.25rem;
 
     .remaining-time {
         background: white;
