--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -13,14 +13,15 @@
         <!-- exercises -->
         <ng-container *ngIf="activeExercise.studentParticipations && activeExercise.studentParticipations[0]">
             <ng-container [ngSwitch]="activeExercise.type">
-                <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-exam-quiz>
-                <jhi-text-editor-exam *ngSwitchCase="TEXT" [exercise]="activeExercise" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-text-editor-exam>
-                <jhi-modeling-submission-exam *ngSwitchCase="MODELING" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-modeling-submission-exam>
                 <jhi-exam-navigation-bar
+                    id="exam-navigation-bar"
                     [exercises]="studentExam.exercises"
                     [endDate]="studentExam.exam.endDate"
                     (onExerciseChanged)="onExerciseChange($event)"
                 ></jhi-exam-navigation-bar>
+                <jhi-exam-quiz *ngSwitchCase="QUIZ" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-exam-quiz>
+                <jhi-text-editor-exam *ngSwitchCase="TEXT" [exercise]="activeExercise" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-text-editor-exam>
+                <jhi-modeling-submission-exam *ngSwitchCase="MODELING" [studentParticipation]="activeExercise.studentParticipations[0]"></jhi-modeling-submission-exam>
             </ng-container>
         </ng-container>
         <!-- exam connection status footer bar -->
