change update submission TODO: TextSubmissionResource disable course check for exam exercises or create new endpoint

--- a/src/main/webapp/app/exam/participate/exercises/text/text-editor-exam.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/text/text-editor-exam.component.html
@@ -17,8 +17,8 @@
                     #textEditor
                     class="text-editor-textarea"
                     [(ngModel)]="answer"
-                    [readonly]="!isActive || !submission"
-                    [disabled]="!isActive || !submission"
+                    [readonly]="!submission"
+                    [disabled]="!submission"
                     (keydown.tab)="onTextEditorTab(textEditor, $event)"
                     (input)="onTextEditorInput($event)"
                 ></textarea>
