temporary changes for testing

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,5 +1,8 @@
+<!--
 <jhi-exam-participation-cover [startView]="true" [exam]="exam" *ngIf="isVisible() && !isOver()"></jhi-exam-participation-cover>
 <jhi-exam-participation-summary *ngIf="isVisible() && isOver()"></jhi-exam-participation-summary>
+-->
+<jhi-exam-participation-summary></jhi-exam-participation-summary>
 <div *ngIf="!disconnected" class="exam-footer connected">
     <div class="container">
         <div class="exam-footer-content">
